--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Binjan — UX/UI Designer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -14,13 +13,14 @@
     <!-- Coluna Esquerda -->
     <section class="left">
       <div class="card hero">
-        <div class="avatar" aria-label="Foto de perfil"></div>
+        <div class="avatar" aria-label="Foto de perfil"><img src="img/perfil.PNG"></div>
         <div class="hero-content">
           <h1>Olá, sou a Gabi!</h1>
           <p>Aprendiz na área de Tecnologia — Em busca de novas oportunidades</p>
           <div class="hero-meta">
             <span class="badge cert">Ciência da Computação</span>
-            <span class="badge accent">gabielarena@gmail.com</span>
+            <span class="badge cert">Desenvolvimento de Sistemas</span>
+            <span class="badge success">gabielarena@gmail.com</span>
             <span class="badge success">Disponível para contato</span>
           </div>
         </div>
@@ -43,9 +43,14 @@
         <p class="muted">
           Tenho facilidade para aprender, sou dedicada e estou sempre disposta a contribuir com
           responsabilidade e comprometimento em cada oportunidade.</p>
-
-      </div>
-      </div>
+        <div class="text-skills">HTML/CSS - Avançado</div>
+        <div class="text-skills">JavaScript - Intermediário</div>
+        <div class="text-skills">TypeScript - Intermediário</div>
+        <div class="text-skills">SQL - Básico</div>
+        <div class="text-skills">Python - Básico</div>
+        <div class="text-skills">Bootstrap - Intermediário</div>
+        <div class="text-skills">Figma - Básico</div>
+        <div class="text-skills">Git e Github - Intermediário</div>
     </section>
 
     <!-- Coluna Direita -->
@@ -61,14 +66,7 @@
             </div>
           </div>
           <div class="work-card">
-            <div class="work-thumb"> <img src="img/plantae.PNG" alt="Loja Pequeno Pé"> </div>
-            <div class="work-body">
-              <div class="work-title">Plantae</div>
-              <div class="work-type">Blog sobre plantas</div>
-            </div>
-          </div>
-          <div class="work-card">
-            <div class="work-thumb"> <img src="img/pequenopelogin.PNG" alt="Loja Pequeno Pé"> </div>
+            <div class="work-thumb"> <img src="img/pizzaria.PNG" alt="Loja Pequeno Pé"> </div>
             <div class="work-body">
               <div class="work-title">Pizzaria Parma</div>
               <div class="work-type">Projeto acadêmico</div>
@@ -77,24 +75,17 @@
         </div>
         <div class="work-grid">
           <div class="work-card">
-            <div class="work-thumb"> <img src="img/pequenopelogin.PNG" alt="Loja Pequeno Pé"> </div>
+            <div class="work-thumb"> <img src="img/sistemasolar.PNG" alt="Loja Pequeno Pé"> </div>
             <div class="work-body">
               <div class="work-title">Sistema Solar</div>
               <div class="work-type">Informações sobre os planetas</div>
             </div>
           </div>
           <div class="work-card">
-            <div class="work-thumb"> <img src="img/pequenopelogin.PNG" alt="Loja Pequeno Pé"> </div>
+            <div class="work-thumb"> <img src="img/plantae.PNG" alt="Loja Pequeno Pé"> </div>
             <div class="work-body">
-              <div class="work-title">Tela de Login</div>
-              <div class="work-type">Cadastro e criação de contas</div>
-            </div>
-          </div>
-          <div class="work-card">
-            <div class="work-thumb"> <img src="img/pequenopelogin.PNG" alt="Loja Pequeno Pé"> </div>
-            <div class="work-body">
-              <div class="work-title">Itália</div>
-              <div class="work-type">Cultura e curiosidades da Itália</div>
+              <div class="work-title">Plantae</div>
+              <div class="work-type">Blog sobre plantas</div>
             </div>
           </div>
         </div>
@@ -131,6 +122,7 @@
       </div>
     </section>
   </main>
+  <br>
 </body>
 
 </html>
