--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Binjan — UX/UI Designer</title>
+  <title>Gabriele Larena</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
