--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="hero-meta">
             <span class="badge cert">Ciência da Computação</span>
             <span class="badge cert">Desenvolvimento de Sistemas</span>
-              <span class="badge success">gabielarena@gmail.com</span>
+            <span class="badge success">gabielarena@gmail.com</span>
             <span class="badge success">Disponível para contato</span>
           </div>
         </div>
@@ -61,14 +61,18 @@
           <div class="work-card">
             <div class="work-thumb"> <img src="img/pequenope.PNG" alt="Loja Pequeno Pé"> </div>
             <div class="work-body">
-              <div class="work-title">Pequeno Pé</div>
+              <a href="https://gabrielelarena.github.io/pequeno-pe/" target="_blank">
+                <div class="work-title">Pequeno Pé</div>
+              </a>
               <div class="work-type">Loja de sapatos</div>
             </div>
           </div>
           <div class="work-card">
             <div class="work-thumb"> <img src="img/pizzaria.PNG" alt="Loja Pequeno Pé"> </div>
             <div class="work-body">
-              <div class="work-title">Pizzaria Parma</div>
+              <a href="https://gabrielelarena.github.io/sistema-pizzaria/" target="_blank">
+                <div class="work-title">Pizzaria Parma</div>
+              </a>
               <div class="work-type">Projeto acadêmico</div>
             </div>
           </div>
@@ -77,14 +81,17 @@
           <div class="work-card">
             <div class="work-thumb"> <img src="img/sistemasolar.PNG" alt="Loja Pequeno Pé"> </div>
             <div class="work-body">
-              <div class="work-title">Sistema Solar</div>
+              <a href="https://gabrielelarena.github.io/site-sistemasolar/" target="_blank">
+                <div class="work-title">Sistema Solar</div>
+              </a>
               <div class="work-type">Informações sobre os planetas</div>
             </div>
           </div>
           <div class="work-card">
-            <div class="work-thumb"> <img src="img/plantae.PNG" alt="Loja Pequeno Pé"> </div>
+            <div class="work-thumb"><img src="img/plantae.PNG" alt="Loja Pequeno Pé"> </div>
             <div class="work-body">
-              <div class="work-title">Plantae</div>
+              <a href="https://gabrielelarena.github.io/blog-page/" target="_blank">
+              <div class="work-title">Plantae</div></a>
               <div class="work-type">Blog sobre plantas</div>
             </div>
           </div>
